FHIR-45507 Need more clarification around how 'url' references are handled

--- a/source/documents.html
+++ b/source/documents.html
@@ -109,7 +109,8 @@ The document bundle SHALL include only:
   The supporting information: Any resources that are part of the graph of resources that reference or are referenced 
   from the composition set, either directly or indirectly (e.g. recursively in a chain).  Such references SHALL use 
   <a href="references.html#Reference">Reference.reference</a>, <a href="references.html#canonical">canonical</a> 
-    or a <a href="datatypes.html#uri">URI</a></li>
+    or a <a href="datatypes.html#uri">URI</a>
+    See <a href="bundle.html#graphs">Graph-connected Bundles</a> for further details.</li>
  <li>Supporting Collateral: A Binary resource containing a stylesheet (as described below)</li>
 </ol>
 <p>
