FHIR-47282 - Clarify Subscription Provider sends notifications, not Subscription resource

--- a/source/subscriptions.html
+++ b/source/subscriptions.html
@@ -65,7 +65,7 @@
   Definitionally, a <code>Subscription</code> requires a <code>SubscriptionTopic</code> - without a resource describing an event or change of interest, a <code>Subscription</code> would have no meaning.
 </p>
 <p>
-  While active, a <code>Subscription</code> relies on both <a href="bundle.html#subscription-notification">Bundle</a> and <a href="subscriptionstatus.html">SubscriptionStatus</a> for sending notifications.
+  The <code>Subscription</code> provider relies on both <a href="bundle.html#subscription-notification">Bundle</a> and <a href="subscriptionstatus.html">SubscriptionStatus</a> for sending notifications related to active subscriptions.
 </p>
 <p>
   When using the <code>Subscription</code> resource, the FHIR server combines
