FHIR-47283 - Clarify polling methods are search and history interactions

--- a/source/subscriptions.html
+++ b/source/subscriptions.html
@@ -75,8 +75,8 @@
   server implementations.
 </p>
 <p>
-  While the FHIR REST API describes a polling-based method for observing events using 
-  <a href="bundle.html">bundles</a> and the <a href="http.html#history">history operation</a>, 
+  While the FHIR REST API describes a polling-based method for observing events using both 
+  <a href="search.html">search</a> and <a href="http.html#history">history interactions</a>, 
   polling can cause processing delays (e.g., time between polling operations) and incur costs in:
   <ul>
     <li>computation - e.g., processing queries when there are no state changes;</li>
