FHIR-47285 - Remove incorrect conformance MAY from workflow description

--- a/source/subscriptions.html
+++ b/source/subscriptions.html
@@ -122,7 +122,7 @@ look similar, they are fundamentally different specifications used to address di
 <a name="overview-workflow"/>
 <h2>Workflow Overview</h2>
 <p>
-  This section gives an overview of the workflow for both Servers and Clients to work with Subscriptions.  Each <a href="subscription.html#channels">channel</a> MAY vary slightly from this general overview - specifically around interactions involving the <code>Endpoint</code> (e.g., when using a <code>rest-hook</code> the client must pre-configure an HTTP endpoint which the server validates, but when using a <code>websocket</code> the client simply connects to the server).
+  This section gives an overview of the workflow for both Servers and Clients to work with Subscriptions.  Each <a href="subscription.html#channels">channel</a> varies slightly from this general overview - specifically around interactions involving the <code>Endpoint</code> (e.g., when using a <code>rest-hook</code> the client must pre-configure an HTTP endpoint which the server validates, but when using a <code>websocket</code> the client simply connects to the server).
 </p>
 
 <a name="workflow-styles"/>
