--- a/source/history.html
+++ b/source/history.html
@@ -111,8 +111,8 @@ notes: do not list revision in the version
         <a href="devicemetric.html">DeviceMetric</a>, <a href="devicealert.html">DeviceAlert</a>, <a href="nutritionproduct.html">NutritionProduct</a>, 
         <a href="nutritionintake.html">NutritionIntake</a>, <a href="nutritionorder.html">NutritionOrder</a>, 
         <a href="biologicallyderivedproduct.html">BiologicallyDerivedProduct</a>, 
-        <a href="biologicallyderivedproductdispense.html">BiologicallyDerivedProductDispense</a>, 
-        <a href="supplydelivery.html">SupplyDelivery</a>, <a href="supplyrequest.html">SupplyRequest</a>, <a href="documentreference.html">DocumentReference</a></li>
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-BiologicallyDerivedProductDispense.html">BiologicallyDerivedProductDispense</a>, 
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-SupplyDelivery.html">SupplyDelivery</a>, <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-SupplyRequest.html">SupplyRequest</a>, <a href="documentreference.html">DocumentReference</a></li>
       <li>The following Module Pages have been added or updated: <a href="diagnostics-module.html">Diagnostics</a>, <a href="device-module.html">Device</a>,
         <a href="nutrition-module.html">Nutrition</a>, <a href="biologically-derived-product-module.html">BDP</a></li>
     </ul>
@@ -153,26 +153,26 @@ notes: do not list revision in the version
       <li>New resources: 
         <a href="actordefinition.html">ActorDefinition</a>,
         <a href="artifactassessment.html">ArtifactAssessment</a>,
-        <a href="biologicallyderivedproductdispense.html">BiologicallyDerivedProductDispense</a>,
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-BiologicallyDerivedProductDispense.html">BiologicallyDerivedProductDispense</a>,
         <a href="conditiondefinition.html">ConditionDefinition</a>,
         <a href="deviceassociation.html">DeviceAssociation</a>,
-        <a href="devicedispense.html">DeviceDispense</a>,
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-DeviceDispense.html">DeviceDispense</a>,
         <a href="encounterhistory.html">EncounterHistory</a>,
         <a href="formularyitem.html">FormularyItem</a>,
         <a href="genomicstudy.html">GenomicStudy</a>,
         <a href="imagingselection.html">ImagingSelection</a>,
-        <a href="inventoryitem.html">InventoryItem</a>,
-        <a href="inventoryreport.html">InventoryReport</a>,
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-InventoryItem.html">InventoryItem</a>,
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-InventoryReport.html">InventoryReport</a>,
         <a href="nutritionintake.html">NutritionIntake</a>,
         <a href="nutritionproduct.html">NutritionProduct</a>,
         <a href="permission.html">Permission</a>,
         TestPlan and
-        <a href="transport.html">Transport</a> + New types: 
+        <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-Transport.html">Transport</a> + New types: 
         <a href="datatypes.html#integer64">integer64</a>,
         <a href="metadatatypes.html#Availability">Availability</a> and 
         <a href="metadatatypes.html#ExtendedContactDetail">ExtendedContactDetail</a>
       </li>
-      <li>Renamed resources <code>DeviceUseStatement</code> -&gt; <a href="deviceusage.html">DeviceUsage</a> and <code>RequestGroup</code> -&gt; <a href="requestorchestration.html">RequestOrchestration</a></li>
+      <li>Renamed resources <code>DeviceUseStatement</code> -&gt; <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-DeviceUsage.html">DeviceUsage</a> and <code>RequestGroup</code> -&gt; <a href="requestorchestration.html">RequestOrchestration</a></li>
       <li>Removed resources 
         CatalogEntry (<a href="http://hl7.org/fhir/R4B/catalogentry.html">R4B</a>),
         DocumentManifest (<a href="http://hl7.org/fhir/R4B/documentmanifest.html">R4B</a>) (use [[%List%]]), 
@@ -246,7 +246,7 @@ to a new type.
       <ul>
         <li>Change the way version numbering works</li>
         <li>New Resources: 
-          <a href="transport.html">Transport</a>, <a href="nutritionintake.html">NutritionIntake</a>,
+          <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-Transport.html">Transport</a>, <a href="nutritionintake.html">NutritionIntake</a>,
           <a href="actordefinition.html">ActorDefinition</a>, <a href="requirements.html">Requirements</a>,
           <a href="genomicstudy.html">GenomicStudy</a> and <a href="formularyitem.html">FormularyItem</a></li>
           <li>New Data Types: 
@@ -265,8 +265,8 @@ to a new type.
       Draft Ballot for R5 - May 2021 Ballot (Apr 14-20 2021). Significant changes:
       <ul>
         <li>Add <a href="datatypes.html#RatioRange">RatioRange</a> datatype</li>
-        <li>Rename DeviceUseStatement to <a href="deviceusage.html">DeviceUsage</a></li>
-        <li>New resources <a href="inventoryreport.html">InventoryReport</a>, <a href="citation.html">Citation</a>, EvidenceReport, and ClinicalUseIssue</li>
+        <li>Rename DeviceUseStatement to <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-DeviceUsage.html">DeviceUsage</a></li>
+        <li>New resources <a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-InventoryReport.html">InventoryReport</a>, <a href="citation.html">Citation</a>, EvidenceReport, and ClinicalUseIssue</li>
         <li>Updates for <a href="subscription.html">subscriptions</a>, <a href="medication-definition-module.html">medication definitions</a>, and <a href="evidence.html">evidence based medicine</a></li>
         <li>Ongoing development of other resources</li>
       </ul>
@@ -927,7 +927,7 @@ to a new type.
         <li>DataElement (now <a href="structuredefinition.html">StructureDefinition</a>) - total rewrite to use ElementDefinition</li>
         <li><a href="device.html">Device</a> - add status, manufactureDate</li>
         <li><a href="devicemetric.html">DeviceMetric</a> - rename operationalState to operationalStatus, add measurementMode, rename calibrationInfo to calibration, change color to an enumerations</li>
-        <li><a href="devicerequest.html">DeviceRequest</a>/<a href="deviceusage.html">DeviceUsage</a> - change to bodySite = code or Reference(BodySite)</li>
+        <li><a href="devicerequest.html">DeviceRequest</a>/<a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-DeviceUsage.html">DeviceUsage</a> - change to bodySite = code or Reference(BodySite)</li>
         <li>DiagnosticRequest- change to bodySite = code or Reference(BodySite)</li>
         <li><a href="diagnosticreport.html">DiagnosticReport</a> - add encounter</li>
         <li><a href="documentreference.html">DocumentReference</a> - add format, remove policyManager, make content : Attachment, and remove several related attributes, remove service reference and add context.practiceSetting, sourcePatientInfo, and related</li>
@@ -1028,7 +1028,7 @@ to a new type.
         <li>DataElement (now <a href="structuredefinition.html">StructureDefinition</a>)</li>
         <li><a href="devicemetric.html">DeviceMetric</a></li>
         <li><a href="devicerequest.html">DeviceRequest</a> </li>
-        <li><a href="deviceusage.html">DeviceUsage</a></li>
+        <li><a href="https://build.fhir.org/ig/HL7/oo-incubator-ig/StructureDefinition-DeviceUsage.html">DeviceUsage</a></li>
         <li><a href="enrollmentrequest.html">EnrollmentRequest</a></li>
         <li><a href="enrollmentresponse.html">EnrollmentResponse</a></li>
         <li><a href="episodeofcare.html">EpisodeOfCare</a></li>
