[FHIR-53139](https://jira.hl7.org/browse/FHIR-53139): Clarified expectations for value-based stratifiers in non-subject-based measures.

--- a/source/clinicalreasoning-quality-reporting.html
+++ b/source/clinicalreasoning-quality-reporting.html
@@ -269,7 +269,179 @@
 	<li>A direct link from each stratum is associated with one or more quality improvement opportunities- stratification represents these improvement opportunities for specific measure subpopulations (i.e., each stratified population represents a different clinical pathway, or a different quality opportunity based on those specific variables on which the cohort was stratified upon).</li>
 </ul>
 
-<p>Measure stratification is specified using the <code>stratifier</code> element of the <a href="measure.html">Measure</a> resource. Stratification criteria are specified either as a reference to a CQL named expression within a Library (e.g. <code>CMS146.AgesUpToNine</code>), or as FHIR resource paths (e.g. <code>Patient.deceased</code>). When the stratification criteria is an expression, the stratification will yield as many result groups as the expression returns. For example, if the expression returns a boolean, then there would be two stratification groups: true and false. When the stratification criteria is a FHIR resource path, there will be as many stratification groups as possible values for the resource path.</p>
+<p>Measure stratification is specified using the <code>stratifier</code> element of the <a href="measure.html">Measure</a> resource. Stratification criteria are specified either as a reference to a CQL named expression within a Library (e.g. <code>CMS146.AgesUpToNine</code>), or as FHIR resource paths (e.g. <code>Patient.deceased</code>). When the stratification criteria is an expression, the stratification will yield as many result strata as the expression returns. For example, if the expression returns a boolean, then there would be two stratification groups: true and false. When the stratification criteria is a FHIR resource path, there will be as many stratification groups as possible values for the resource path.</p>
+
+<a name="criteria-based-stratifiers"> </a>
+<p><b>Criteria-based Stratifiers</b></p>
+
+<p>Using criteria-based stratifiers is the most straightforward stratification approach as it is simply another set of population criteria for the measure. The expressions used to define criteria-based stratifiers must be consistent with the basis of the measure (i.e. they must return the same type as all the other population criteria expressions in the measure. For example, consider stratification into three age ranges: 0-20, 21-40, 41+.</p>
+
+<p>NOTE: These examples are deliberately ignoring the measurement period, as well as the fact that age is a moving point now. Real measures will of course need to take these factors into account, but these examples are focusing solely on the structural representation of the various approaches to stratification.</p>
+
+<p>Subject-based</p>
+
+<p>Percentage of patients with a well-visit</p>
+
+<pre><code>
+define "Denominator":
+  Patient.active is true
+
+define "Numerator":
+  exists ([Encounter: "Well-Visit Encounter Codes"])
+</code></pre>
+
+<p>Criteria-based stratification by age range</p>
+
+<pre><code>
+define "Stratifier P0Y--P21Y":
+  Patient.ageInYears() between 0 and 20
+
+define "Stratifier P21Y--P41Y":
+  Patient.ageInYears() between 21 and 40
+
+define "Stratifier P41Y--P9999Y":
+  Patient.ageInYears() > 41
+</code></pre>
+
+<p>Non-subject-based</p>
+
+<p>Percentage of well-visits with a blood pressure observation</p>
+
+<pre><code>
+define "Denominator":
+  [Encounter: "Well-Visit Encounter Codes"]
+
+define "Numerator":
+  [Encounter: "Well-Visit Encounter Codes"] E
+    with [Observation: "Blood Pressure Observation Codes"] O such that O.issued during E.period
+</code></pre>
+
+<p>Criteria-based stratification by age range</p>
+
+<pre><code>
+define "Stratifier P0Y--P21Y":
+  [Encounter: "Well-Visit Encounter Codes"] E
+    where Patient.ageInYears() between 0 and 20
+
+define "Stratifier P21Y--P41Y":
+  [Encounter: "Well-Visit Encounter Codes"] E
+    where Patient.ageInYears() between 21 and 40
+
+define "Stratifier P41Y--P9999Y":
+  [Encounter: "Well-Visit Encounter Codes"] E
+    where Patient.ageInYears() > 41
+</code></pre>
+
+<a name="value-based-stratifiers"> </a>
+<p><b>Value-based Stratifiers</b></p>
+
+<p>Value-based stratifiers are expressed as a set of stratifier components, each one identifying a path or an expression that returns a value of a type other than the basis. Using the same simple example measures as above:</p>
+
+<p>Subject-based, valued-based, as a path, stratification by gender:</p>
+
+<pre><code>
+&lt;stratifier&gt;
+  &lt;component&gt;
+    &lt;criteria&gt;
+      &lt;expression value="gender"/&gt;
+    &lt;/criteria&gt;
+  &gt;/component&gt;
+&lt;/stratifier&gt;
+</code></pre>
+
+<p>Note that with value-based stratifiers represented as a path, the value is an expression written from the perspective of the measure subject (Patient in this case) for subject-based measures, but the measure basis for non-subject-based measures.</p>
+
+<p>Subject-based, value-based, as an expression</p>
+
+<pre><code>
+define "Age Range Stratifier":
+  case
+    when Patient.ageInYears() between 0 and 20 then 'P0Y--P21Y'
+    when Patient.ageInYears() between 21 and 40 then 'P21Y--P41Y'
+    when Patient.ageInYears() > 41 then 'P41Y--P9999Y'
+    else null
+  end
+</code></pre>
+
+<p>The first thing to note here is that this approach involved only a single stratification element to be defined, "Age Range Stratifier", rather than the criteria-based approach, which required defining a stratifier element for each stratification group. Obviouisly, the more stratification groups, the more economical this approach becomes.</p>
+
+<p>Non-subject-based</p>
+
+<p>Non-subject-based, value-based, as an expression</p>
+
+<pre><code>
+define function "Age Range Stratifier"(encounter Encounter):
+  case
+    when Patient.ageInYearsAt(start of encounter.period) between 0 and 20 then 'P0Y--P21Y'
+    when Patient.ageInYearsAt(start of encounter.period) between 21 and 40 then 'P21Y--P41Y'
+    when Patient.ageInYearsAt(start of encounter.period) > 41 then 'P41Y--P9999Y'
+    else null
+  end
+</code></pre>
+
+<p>Note that with value-based stratifiers represented as an expression, the expression is written from the perspective of the measure subject, but also defines a parameter with the type of the basis. This is the same approach used to calculate measure observations, because the stratifier expression must be evaluated for each member of the population to determine the stratum value to which that member of the population belongs.</p>
+
+<a name="component-stratifiers"> </a>
+<p><b>Component Stratifiers</b></p>
+
+<p>While criteria-based stratifiers are expressed using the <code>stratifier.criteria</code> element, value-based stratifiers are specified using any number of <code>component</code> elements. Each component stratifier specifies an expression that returns the value of the stratifier for members of the population. The advantage of using component stratifiers is that the combinations are computed, rather than having to be expressed. For example, consider the case of stratifying by age-range and gender, for the subject-based example measure:</p>
+
+<pre><code>
+define "Stratifier P0Y--P21Y":
+  Patient.ageInYears() between 0 and 20
+
+define "Stratifier P21Y--P41Y":
+  Patient.ageInYears() between 21 and 40
+
+define "Stratifier P41Y--P9999Y":
+  Patient.ageInYears() > 41
+
+define "Stratifier Male":
+  Patient.gender = 'male'
+
+define "Stratifier Female":
+  Patient.gender = 'female'
+</code></pre>
+
+<p>To do this using criteria-based stratifiers would require specifying a stratifier expression for each possible combination of age range group and gender. With even larger stratifications, this is untenable. Value-based stratifiers simplify this, so you could say:</p>
+
+<pre><code>
+define "Age Range Stratifier":
+  case
+    when Patient.ageInYearsAt(start of Encounter.period) between 0 and 20 then 'P0Y--P21Y'
+    when Patient.ageInYearsAt(start of Encounter.period) between 21 and 40 then 'P21Y--P41Y'
+    when Patient.ageInYearsAt(start of Encounter.period) > 41 then 'P41Y--P9999Y'
+    else null
+  end
+
+define "Gender Stratifier":
+  Patient.gender
+
+define "Age Range and Gender Stratifier":
+  "Age Range Stratifier" + ':' + Coalesce("Gender Stratifier", 'Unknown')
+</code></pre>
+
+<p>This is better, in that it only requires the creation of a single stratifier element referencing the "Age Range and Gender Stratifier" expression, but it arbitrarily forces construction of stratum values by combining the values from the other stratifiers. Component-based stratifiers allow this to be done directly:</p>
+
+<pre><code>
+&lt;stratifier&gt;
+  &lt;component&gt;
+    &lt;criteria&gt;
+      &lt;expression value="Age Range Stratifier"/&gt;
+    &lt;/criteria&gt;
+  &lt;/component&gt;
+  &lt;component&gt;
+    &lt;criteria&gt;
+      &lt;expression value="Gender Stratifier"/&gt;
+    &lt;/criteria&gt;
+  &lt;/component&gt;
+&lt;/stratifier&gt;
+</code></pre>
+
+<a name="valueset-stratifiers"> </a>
+<p>Using Value Sets for Stratification</p>
+
+<p>It is often the case that the set of possible values for a stratifiers is known and expressible using a terminology. When this is the case, the <code>valueSet</code> element of the stratifier may be used. When this is done, the value set used must be consistent with the other aspects of the stratifier definition. For example, given the "Age Range Stratifier" above, a value set with codes from the "Time Period Ranges" code system can be used to provide the expected possible values as part of the stratifier specification.</p>
 
 <a name="supplemental-data"/>
 <h6>Supplemental Data</h6>
