FHIR-40314 Typo in "Coded Values, Code Systems, and Value Sets" section

--- a/source/terminologies.html
+++ b/source/terminologies.html
@@ -99,7 +99,7 @@ see the FHIR Confluence pages for <a href="https://confluence.hl7.org/display/FH
 <h2>Coded Values, Code Systems, and Value Sets</h2>
 <p>
 The set of coded values that is allowed in an element is known as a <a href="valueset.html">"value set"</a>. Anywhere these datatypes are used, the
-specification <b>"binds"></b> a value set to the element, and for the types code, Coding, and CodeableConcept, always does.
+specification <b>"binds"</b> a value set to the element, and for the types code, Coding, and CodeableConcept, always does.
 </p>
 <ul>
  <li><b><a href="codesystem.html">Code Systems</a></b> define concepts and give them meaning through formal definitions, and assign codes that represent the concepts</li>
